--- a/recipe-manager/app/templates/recipe_detail.html
+++ b/recipe-manager/app/templates/recipe_detail.html
@@ -3,35 +3,36 @@
 {% block title %}{{ recipe.name }} - Recipe Manager{% endblock %}
 
 {% block content %}
+<div class="container" style="max-width: 960px;">
     <div class="row">
         <div class="col-md-8">
             <h1>{{ recipe.name }}</h1>
             <div class="mb-3">
                 {% for recipe_tag in recipe.recipe_tags %}
-                    <a href="{{ url_for('view_recipes_by_tag', tag_name=recipe_tag.tag.name) }}" class="badge bg-secondary text-decoration-none">{{ recipe_tag.tag.name }}</a>
+                    <a href="{{ url_for('view_recipes_by_tag', tag_name=recipe_tag.tag.name) }}" class="badge text-decoration-none" style="background-color: {{ get_color_from_string(recipe_tag.tag.name) }}">{{ recipe_tag.tag.name }}</a>
                 {% endfor %}
             </div>
             <p class="lead">Servings: {{ recipe.servings }}</p>
         </div>
         <div class="col-md-4 text-end">
-            <a href="{{ url_for('edit_recipe', id=recipe.id) }}" class="btn btn-primary">Edit Recipe</a>
+            <a href="{{ url_for('edit_recipe_form', id=recipe.id) }}" class="btn btn-primary">Edit Recipe</a>
             <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
                 Delete Recipe
             </button>
         </div>
     </div>
 
-    <img src="{{ url_for('static', path=recipe.photo_path) if recipe.photo_path else url_for('static', path='placeholder.jpg') }}" class="img-fluid rounded mb-4" alt="{{ recipe.name }}">
+    <img src="{{ url_for('static', path=recipe.photo_path) if recipe.photo_path else url_for('static', path='placeholder.jpg') }}" class="img-fluid rounded mb-4 recipe-detail-img" alt="{{ recipe.name }}">
 
-    <div class="row">
+    <div class="row g-5">
         <div class="col-md-5">
             <h3>Ingredients</h3>
             {% set current_group = '' %}
-            <ul>
+            <ul class="list-unstyled">
                 {% for ingredient in recipe.ingredients %}
                     {% if ingredient.group_name and ingredient.group_name != current_group %}
                         {% set current_group = ingredient.group_name %}
-                        <li style="list-style-type: none; margin-left: -1em;"><strong>{{ current_group }}</strong></li>
+                        <li class="mt-3"><strong>{{ current_group }}</strong></li>
                     {% endif %}
                     <li>
                         {{ ingredient.amount }} {{ ingredient.name }}
@@ -51,10 +52,10 @@
     </div>
 
     {% if recipe.notes %}
-    <hr>
+    <hr class="my-4">
     <h3>Notes</h3>
     {% for note in recipe.notes %}
-        <figure>
+        <figure class="mt-3">
             <blockquote class="blockquote">
                 <p>{{ note.text }}</p>
             </blockquote>
