--- a/recipe-manager/app/templates/base.html
+++ b/recipe-manager/app/templates/base.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Recipe Manager{% endblock %}</title>
+    <link rel="icon" href="{{ url_for('static', path='favicon.svg') }}" type="image/svg+xml">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', path='css/custom.css') }}">
     {% block head %}{% endblock %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
+        <div class="container" style="max-width: 960px;">
             <a class="navbar-brand" href="/">Recipe Manager</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -18,21 +20,19 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/recipe/new">New Recipe</a>
+                        <a class="nav-link" href="/">Home</a>
                     </li>
                 </ul>
-                <form class="d-flex" action="{{ url_for('read_root') }}" method="get">
+                <form class="d-flex me-3" action="{{ url_for('read_root') }}" method="get">
                     <input class="form-control me-2" type="search" name="search" placeholder="Search recipes" aria-label="Search" value="{{ search or '' }}">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
+                <a href="{{ url_for('new_recipe_form') }}" class="btn btn-primary">New Recipe</a>
             </div>
         </div>
     </nav>
 
-    <div class="container mt-4">
+    <div class="container" style="max-width: 960px;">
         {% block content %}{% endblock %}
     </div>
 
