--- a/recipe-manager/app/templates/base.html
+++ b/recipe-manager/app/templates/base.html
@@ -27,17 +27,45 @@
                     <input class="form-control me-2" type="search" name="search" placeholder="Search recipes" aria-label="Search" value="{{ search or '' }}">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
-                <a href="{{ url_for('new_recipe_form') }}" class="btn btn-primary">New Recipe</a>
+                <a href="{{ url_for('new_recipe_form') }}" class="btn btn-primary me-2">New Recipe</a>
+                <button class="btn btn-secondary" id="toggle-planner-btn">Show Planner</button>
             </div>
         </div>
     </nav>
 
-    <div class="container" style="max-width: 960px;">
-        {% block content %}{% endblock %}
+    <div class="main-container">
+        <div class="container content-container" style="max-width: 960px;">
+            {% block content %}{% endblock %}
+        </div>
+        {% include 'components/planner.html' %}
+    </div>
+
+    <!-- Add to Plan Modal -->
+    <div class="modal fade" id="addToPlanModal" tabindex="-1" aria-labelledby="addToPlanModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addToPlanModalLabel">Add "Recipe" to Meal Plan</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Select a date to add this recipe:</p>
+                    <div class="week-navigation d-flex justify-content-between align-items-center mb-3">
+                        <button class="btn btn-sm btn-outline-secondary" id="modal-prev-week-btn">< Prev</button>
+                        <span id="modal-week-display">This Week</span>
+                        <button class="btn btn-sm btn-outline-secondary" id="modal-next-week-btn">Next ></button>
+                    </div>
+                    <div class="row row-cols-7 g-2 text-center" id="modal-days-container">
+                        <!-- Days will be populated by JavaScript -->
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <!-- Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', path='js/planner.js') }}"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
