--- a/recipe-manager/app/templates/base.html
+++ b/recipe-manager/app/templates/base.html
@@ -27,8 +27,8 @@
                     <input class="form-control me-2" type="search" name="search" placeholder="Search recipes" aria-label="Search" value="{{ search or '' }}">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
-                <a href="{{ url_for('new_recipe_form') }}" class="btn btn-primary me-2">New Recipe</a>
-                <button class="btn btn-secondary" id="toggle-planner-btn">Show Planner</button>
+                <button class="btn btn-secondary me-2" id="toggle-planner-btn">Show Planner</button>
+                <a href="{{ url_for('new_recipe_form') }}" class="btn btn-primary">New Recipe</a>
             </div>
         </div>
     </nav>
